# event-tracker

./: Cargo.toml  Dockerfile  README.md
src/: api.rs  error.rs  lib.rs  main.rs  model.rs  storage.rs
tests/: api_get_requests.rs  api_post_requests.rs  rate_limiting.rs
